--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/koa-json": "^2.0.18",
+    "@types/koa-router": "^7.4.0",
+    "@types/mongodb": "^3.5.9",
     "koa": "^2.11.0",
-    "koa-router": "^8.0.8"
+    "koa-json": "^2.0.2",
+    "koa-router": "^8.0.8",
+    "mongodb": "^3.5.6"
   },
   "devDependencies": {
     "@types/koa": "^2.11.3"
